--- a/script/server.conf
+++ b/script/server.conf
@@ -12,6 +12,10 @@ server {
   bootstrap_expect = 1
 }
 
+client {
+  enabled          = true
+}
+
 plugin "raw_exec" {
   config {
     enabled = true
