--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.20.0",
+    "auth0-js": "^9.19.0",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
