--- a/web-frontend/auth_config.json
+++ b/web-frontend/auth_config.json
@@ -1,4 +1,4 @@
 {
-    "domain": "eduvirt.eu.auth0.com",
-    "clientId": "HreYu61NpDgkoSURN74lnWxPyl10Brbf"
+    "domain": "domain.com",
+    "clientId": "AUTH0_CLIENT_ID"
 }
